# Homegear-EnOcean

./: .gitmodules  .project  CMakeLists.txt  configure.ac  makeDebug.sh  updateSubmodules.sh
debian/: changelog  control  copyright  postinst  postrm  rules
misc/Config Directory/: enocean.conf
misc/Device Description Files/: A5-02-01.xml  A5-02-02.xml  A5-02-03.xml  A5-02-04.xml  A5-02-05.xml  A5-02-06.xml  A5-02-07.xml  A5-02-08.xml  A5-02-09.xml  A5-02-0A.xml  A5-02-0B.xml  A5-02-10.xml  A5-02-11.xml  A5-02-12.xml  A5-02-13.xml  A5-02-14.xml  A5-02-15.xml  A5-02-16.xml  A5-02-17.xml  A5-02-18.xml  A5-02-19.xml  A5-02-1A.xml  A5-02-1B.xml  A5-02-20.xml  A5-02-30.xml  A5-04-01.xml  A5-04-02.xml  A5-04-03.xml  A5-05-01.xml  A5-06-01.xml  A5-06-02.xml  A5-06-03.xml  A5-06-04.xml  A5-06-05.xml  A5-07-01.xml  A5-10-12.xml  A5-12-01.xml  A5-20-01.xml  A5-20-04.xml  A5-38-01.xml  (+16 more)
misc/Device Description Files/l10n/de-DE/: A5-02-01.xml  A5-04-01.xml
misc/Device Description Files/l10n/en-US/: A5-02-01.xml  A5-04-01.xml
misc/Firmware/: 000F.33A53807.fw  000F.33D20109.fw  000F.33D20110.fw
misc/UI Translations/de-DE/: admin.de-DE.yaml  admin.de_DE.yaml
misc/UI Translations/en-US/: admin.en-US.yaml  admin.en_US.yaml
misc/UI Translations/en_US/: admin.en_US.yaml
src/: EnOcean.cpp  EnOcean.h  EnOceanCentral.cpp  EnOceanCentral.h  EnOceanPacket.cpp  EnOceanPacket.h  EnOceanPackets.cpp  EnOceanPackets.h  EnOceanPeer.cpp  EnOceanPeer.h  Factory.cpp  Factory.h  GD.cpp  GD.h  Gd.cpp  Gd.h  Interfaces.cpp  Interfaces.h  Makefile.am  MyCentral.cpp  MyCentral.h  MyFamily.cpp  MyFamily.h  MyPacket.cpp  MyPacket.h  MyPeer.cpp  MyPeer.h  RemanFeatures.cpp  RemanFeatures.h  Security.cpp  Security.h
src/PhysicalInterfaces/: Hgdc.cpp  Hgdc.h  HomegearGateway.cpp  HomegearGateway.h  IEnOceanInterface.cpp  IEnOceanInterface.h  Usb300.cpp  Usb300.h
